--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
 				</svg>
 			</div>
 		</header>
-		<main>
-			<img src="./assets/dog1.jpg" alt="dog" />
+		<main id="dog-profile-content">
+			<img class="dog-image" src="./assets/dog1.jpg" alt="dog" />
 			<div class="dog-description">
 				<h1>Teddy, 30</h1>
 				<h2>How you doin?</h2>
 			</div>
 		</main>
-		<div class="buttons-group">
-			<div class="buttons" id="dislike-btn">
+		<div id="buttons-group" class="buttons-group">
+			<button class="buttons" id="dislike-btn">
 				<svg
 					width="50"
 					height="50"
@@ -109,8 +109,8 @@
 						</linearGradient>
 					</defs>
 				</svg>
-			</div>
-			<div class="buttons" id="like-btn">
+			</button>
+			<button class="buttons" id="like-btn">
 				<svg
 					width="60"
 					height="50"
@@ -136,7 +136,7 @@
 						</linearGradient>
 					</defs>
 				</svg>
-			</div>
+			</button>
 		</div>
 	</body>
 </html>
